# airbnb-clone-backend

./: pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
wishlists/: admin.py  models.py
wishlists/migrations/: 0001_initial.py
